--- a/src/input.css
+++ b/src/input.css
@@ -6,4 +6,8 @@
     .section-min-height {
         min-height: calc(100vh - 68px);
     }
+
+    .toggle-btn {
+        @apply [&>div::before]:top-0 [&>div::before]:rotate-45 [&>div::after]:top-0 [&>div::after]:-rotate-45 [&>div]:bg-transparent [&>div]:rotate-[360deg]
+    }
 }
